--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
 
     <div class="card">
         <div class="api-url">
-            API: <strong>https://api.countrystatecity.in/api/v1</strong>
+            API: <strong>https://api.countrystatecity.in/v1</strong>
         </div>
 
         <label for="apiKey">API Key</label>
@@ -209,7 +209,7 @@
     </div>
 
     <script>
-        const API_BASE = 'https://api.countrystatecity.in/api/v1';
+        const API_BASE = 'https://api.countrystatecity.in/v1';
 
         const apiKeyInput = document.getElementById('apiKey');
         const countrySelect = document.getElementById('country');
